@@ -1,7 +1,7 @@
 POFILES	= $(wildcard *.po)
 TEXTS	= $(addsuffix .tr,$(basename $(wildcard *.po)))
 
-PRODUCT = "SUSE Linux 10.0"
+PRODUCT = "SUSE Linux 10.1"
 
 all: text.inc $(TEXTS)
 
